--- a/index.html
+++ b/index.html
@@ -6,5 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GPT-3.5-turbo</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>My chatgpt</h1>
+      <form action="">
+        <input type="text" name="message" id="message" />
+        <button type="submit">Send</button>
+      </form>
+      <div id="chatlog"></div>
+    </main>
+    <script>
+      let messages = [];
+      const chatlog = document.getElementById("chatlog");
+      const message = document.getElementById("message");
+      console.log(chatlog, message);
+      const form = document.querySelector("form");
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const messageText = message.value;
+        const newMsg = { role: "user", content: `${messageText}` };
+        messages.push(newMsg);
+        console.log(messageText);
+        message.value = "";
+        const messageElement = document.createElement("div");
+        // messageElement.classList.add("messsage");
+        // messageElement.classList.add("messsage--sent");
+        messageElement.innerHTML = `
+            <div>${messageText}</div>
+            `;
+        chatlog.appendChild(messageElement);
+        chatlog.scrollTop = chatlog.scrollHeight;
+        fetch("http://localhost:9000/", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            messages,
+          }),
+        })
+          .then((res) => res.json())
+          .then((data) => {
+            let newAssistantMsg = {
+              role: "assistant",
+              content: `${data.completion.content}`,
+            };
+            messages.push(newAssistantMsg);
+            console.log(data);
+            const messageElement = document.createElement("div");
+            // messageElement.classList.add("message");
+            // messageElement.classList.add("message--received");
+            messageElement.innerHTML = `
+            <div>${data.completion.content}</div>
+            `;
+            chatlog.appendChild(messageElement);
+            chatlog.scrollTop = chatlog.scrollHeight;
+          });
+      });
+    </script>
+  </body>
 </html>
